metadata/objects/graxbre_br_event_cindex__x.object
<CustomObject>
    <description>graxbre__br_event__cindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxbre__br_event__cindex</externalName>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <description>LastActivityDate</description>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>LastActivityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>OwnerId</description>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bre_BR_Events_Zone_c__c</fullName>
        <description>bre__BR_Events_Zone__c</description>
        <externalDeveloperName>bre__BR_Events_Zone__c</externalDeveloperName>
        <label>bre__BR_Events_Zone__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre_Description_c__c</fullName>
        <description>bre__Description__c</description>
        <externalDeveloperName>bre__Description__c</externalDeveloperName>
        <label>bre__Description__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre_End_Date_c__c</fullName>
        <description>bre__End_Date__c</description>
        <externalDeveloperName>bre__End_Date__c</externalDeveloperName>
        <label>bre__End_Date__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bre_Enrollment_not_required_c__c</fullName>
        <description>bre__Enrollment_not_required__c</description>
        <externalDeveloperName>bre__Enrollment_not_required__c</externalDeveloperName>
        <label>bre__Enrollment_not_required__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre_Hide_attendees_c__c</fullName>
        <description>bre__Hide_attendees__c</description>
        <externalDeveloperName>bre__Hide_attendees__c</externalDeveloperName>
        <label>bre__Hide_attendees__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre_Limit_of_attendees_c__c</fullName>
        <description>bre__Limit_of_attendees__c</description>
        <externalDeveloperName>bre__Limit_of_attendees__c</externalDeveloperName>
        <label>bre__Limit_of_attendees__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre_List_Image_Filename_c__c</fullName>
        <description>bre__List_Image_Filename__c</description>
        <externalDeveloperName>bre__List_Image_Filename__c</externalDeveloperName>
        <label>bre__List_Image_Filename__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre_Location_Latitude_s__c</fullName>
        <description>bre__Location__Latitude__s</description>
        <externalDeveloperName>bre__Location__Latitude__s</externalDeveloperName>
        <label>bre__Location__Latitude__s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre_Location_Longitude_s__c</fullName>
        <description>bre__Location__Longitude__s</description>
        <externalDeveloperName>bre__Location__Longitude__s</externalDeveloperName>
        <label>bre__Location__Longitude__s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre_Main_Image_Filename_c__c</fullName>
        <description>bre__Main_Image_Filename__c</description>
        <externalDeveloperName>bre__Main_Image_Filename__c</externalDeveloperName>
        <label>bre__Main_Image_Filename__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre_Publicly_available_c__c</fullName>
        <description>bre__Publicly_available__c</description>
        <externalDeveloperName>bre__Publicly_available__c</externalDeveloperName>
        <label>bre__Publicly_available__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre_Send_reminders_c__c</fullName>
        <description>bre__Send_reminders__c</description>
        <externalDeveloperName>bre__Send_reminders__c</externalDeveloperName>
        <label>bre__Send_reminders__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre_Start_Date_c__c</fullName>
        <description>bre__Start_Date__c</description>
        <externalDeveloperName>bre__Start_Date__c</externalDeveloperName>
        <label>bre__Start_Date__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bre_Venue_Address_c__c</fullName>
        <description>bre__Venue_Address__c</description>
        <externalDeveloperName>bre__Venue_Address__c</externalDeveloperName>
        <label>bre__Venue_Address__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxModifiedTime__c</fullName>
        <description>graxModifiedTime</description>
        <externalDeveloperName>graxModifiedTime</externalDeveloperName>
        <label>graxModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax_bre_br_event_c_name__c</fullName>
        <description>grax_bre__br_event__c_name</description>
        <externalDeveloperName>grax_bre__br_event__c_name</externalDeveloperName>
        <label>grax_bre__br_event__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_bre_br_event_c_xf__c</fullName>
        <description>grax_bre__br_event__c_xf</description>
        <externalDeveloperName>grax_bre__br_event__c_xf</externalDeveloperName>
        <label>grax_bre__br_event__c_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>graxbre__br_event__cindex</label>
    <pluralLabel>graxbre__br_event__cindex</pluralLabel>
</CustomObject>